src/objects/Targeted_School__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <formula>Secondary_School__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Target_School_for_Program_s__c</fullName>
        <label>Is Target School for Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EOC Brockton</fullName>
                </value>
                <value>
                    <fullName>EOC Boston</fullName>
                </value>
                <value>
                    <fullName>TS Brockton</fullName>
                </value>
                <value>
                    <fullName>TS Boston</fullName>
                </value>
                <value>
                    <fullName>UB Brockton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCES_School_ID__c</fullName>
        <formula>Secondary_School__r.NCES_School_ID__c</formula>
        <label>NCES School ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Support_1__c</fullName>
        <label>Report Support 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Support_2__c</fullName>
        <label>Report Support 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Support_3__c</fullName>
        <label>Report Support 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_School_Name__c</fullName>
        <formula>Secondary_School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_School__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Is Target School</description>
        <label>Secondary School</label>
        <referenceTo>Secondary_School__c</referenceTo>
        <relationshipLabel>Targeted Schools</relationshipLabel>
        <relationshipName>Targeted_Schools</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Year__c</fullName>
        <label>Service Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Secondary_School__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supports_Dual_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Dual Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Targeted_School_Name__c</fullName>
        <formula>Secondary_School__r.Name +&apos;(&apos;+TEXT( Service_Year__c )+&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Targeted School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Secondary_School__r.Zip__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Targeted School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TS_Boston_Active_Target_Schools</fullName>
        <columns>NAME</columns>
        <columns>Is_Target_School_for_Program_s__c</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>Secondary_School_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Supports_Dual_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Target_School_for_Program_s__c</field>
            <operation>includes</operation>
            <value>TS Boston</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>TS Boston Active Target Schools</label>
    </listViews>
    <listViews>
        <fullName>TS_Brockon_Active_Target_Schools</fullName>
        <columns>NAME</columns>
        <columns>Is_Target_School_for_Program_s__c</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>Secondary_School_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Supports_Dual_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Target_School_for_Program_s__c</field>
            <operation>includes</operation>
            <value>TS Brockton</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>TS Brockton Active Target Schools</label>
    </listViews>
    <listViews>
        <fullName>Target_School_Info</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Target_School_for_Program_s__c</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>Secondary_School__c</columns>
        <columns>Secondary_School_Name__c</columns>
        <columns>Service_Year__c</columns>
        <columns>State__c</columns>
        <columns>Supports_Dual_Enrollment__c</columns>
        <columns>Zip__c</columns>
        <filterScope>Everything</filterScope>
        <label>Target School Info</label>
    </listViews>
    <nameField>
        <label>Targeted School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targeted Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Targeted_School_Name_Must_Be_Unique</fullName>
        <active>true</active>
        <errorConditionFormula>and(
    Unique_Targeted_School_Name__c = VLOOKUP
       ($ObjectType.Targeted_School__c.Fields.Name , $ObjectType.Targeted_School__c.Fields.Name, Unique_Targeted_School_Name__c ),

    not(
     Id=VLOOKUP
         ($ObjectType.Targeted_School__c.Fields.Id , $ObjectType.Targeted_School__c.Fields.Name, Unique_Targeted_School_Name__c )))</errorConditionFormula>
        <errorMessage>There is already an existing Target School for the same Secondary School and Service Year.</errorMessage>
    </validationRules>
</CustomObject>